tests/error/linear_errors/copy_qubit.err
Error: Copy violation (at $FILE:14:14)
   | 
12 | @guppy(module)
13 | def foo(q: qubit @owned) -> tuple[qubit, qubit]:
14 |     return q, q
   |               ^ Variable `q` with non-copyable type `qubit` cannot be
   |                 returned ...
   | 
14 |     return q, q
   |            - since it was already returned here

Guppy compilation failed due to 1 previous error
